minimal p[ackage.json for vercel config

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
         <h4>Compliance Management Platform built for Safety Professionals to drive efficiency, mitigate safety risk & empower team.</h4>
       </div>
       <div class="hero-image">
-        <img src="image.png" alt="Compliance Management Dashboard" />
+        <img src="/image.png" alt="Compliance Management Dashboard" loading="lazy"/>
       </div>
   </section>
 
