updated substack link

--- a/public/index.html
+++ b/public/index.html
@@ -314,7 +314,7 @@
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
         LinkedIn
       </a>
-      <a href="https://substack.com" target="_blank">
+      <a href="https://substack.com/@5easier" target="_blank">
         <img src="substack.png" /> Substack
       </a>
       <a href="founder@5easier.com">
