--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,7 @@
       margin: 0 auto;
       display: flex;
       flex-direction: column;
+      font-family: 'Garet-Book', sans-serif;
       gap: 1rem;
     }
 
@@ -203,6 +204,7 @@
       border: 1px solid #ccc;
       border-radius: 5px;
       font-size: 1rem;
+      font-family: 'Garet-Book', sans-serif;
     }
 
     button {
@@ -213,6 +215,7 @@
       font-size: 1rem;
       border-radius: 5px;
       cursor: pointer;
+      font-family: 'Garet-Book', sans-serif;
     }
 
     .social-icons {
