--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
     }
 
     .program-visuals img:last-child {
-      height: 400px;
+      height: 300px;
       width: auto;
       /* margin-right: 100px; */
     }
@@ -272,7 +272,7 @@
 
   <section class="program">
     <div class="program-visuals">
-      <img src="page3_image1.png" alt="Mobile App" />
+      <img src="123.png" alt="Mobile App" />
       <img src="page3_image2.png" alt="Dashboard" />
     </div>
     <h2>Digitalize your Safety Program</h2>
