--- a/public/index.html
+++ b/public/index.html
@@ -128,15 +128,15 @@
 
 
     .program-visuals img:first-child {
-      width: 200px;
+      width: 250px;
       height: auto;
       /* margin-left: 100px;
       margin-right: 20px; */
     }
 
     .program-visuals img:last-child {
-      height: 300px;
-      width: auto;
+      height: 350px;
+      width: 700px;
       /* margin-right: 100px; */
     }
 
@@ -272,7 +272,7 @@
 
   <section class="program">
     <div class="program-visuals">
-      <img src="123.png" alt="Mobile App" />
+      <img src="finale_phone_img.png" alt="Mobile App" />
       <img src="page3_image2.png" alt="Dashboard" />
     </div>
     <h2>Digitalize your Safety Program</h2>
