--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
 
     .program-visuals img:last-child {
       height: 350px;
-      width: 700px;
+      width: 80%;
       /* margin-right: 100px; */
     }
 
