--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,9 @@
 
     .program-visuals img:last-child {
       height: 350px;
-      width: 80%;
+      max-width: 600px;
+      width: 100%;
+
       /* margin-right: 100px; */
     }
 
