--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
       text-decoration: none;
       color: #004d26;
       font-weight: bold;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Garet-Heavy', sans-serif;
       display: flex;
       align-items: center;
       gap: 0.5rem;
