--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
     }
 
     .program-visuals img:last-child {
-      height: 350px;
+      height: auto;
       max-width: 750px;
       width: 100%;
 
