button font fix

--- a/public/index.html
+++ b/public/index.html
@@ -213,11 +213,12 @@
       padding: 0.75rem;
       border: none;
       background: #00bf63;
-      color: #000;
+      color: #fff;
       font-size: 1rem;
       border-radius: 5px;
       cursor: pointer;
       font-family: 'Garet-Book', sans-serif;
+      font-weight: 700;
     }
 
     .social-icons {
