--- a/public/index.html
+++ b/public/index.html
@@ -323,7 +323,7 @@
       <a href="https://substack.com/@5easier" target="_blank">
         <img src="substack.png" /> Substack
       </a>
-      <a href="founder@5easier.com">
+      <a href="mailto:founder@5easier.com">
         <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Email" /> Email
       </a>
       <a href="tel:+13202246327">
