--- a/public/index.html
+++ b/public/index.html
@@ -10,29 +10,23 @@
     @font-face {
       font-family: 'Garet';
       src: url('Garet-Heavy.otf') format('opentype');
-      /* You must host the font file */
       font-weight: bold;
       font-style: normal;
     }
-
     @font-face {
       font-family: 'Garet-Book';
       src: url('Garet-Book.otf') format('opentype');
       font-weight: normal;
       font-style: normal;
     }
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
-    html,
-    body {
+    html, body {
       height: 100%;
     }
-
     body {
       font-family: 'Garet', sans-serif;
       background: #ffffff;
@@ -41,20 +35,17 @@
       display: flex;
       flex-direction: column;
     }
-
     header {
       background-color: #fff;
       color: #00bf63;
       padding: 3rem 2rem 1rem;
       text-align: center;
     }
-
     header h1 {
       font-size: 3rem;
       font-family: 'Garet', sans-serif;
       font-weight: bold;
     }
-
     section.hero {
       padding: 4rem 2rem;
       background-color: #d8e0d6;
@@ -63,7 +54,6 @@
       align-items: center;
       text-align: center;
     }
-
     @media(min-width: 768px) {
       section.hero {
         flex-direction: row;
@@ -71,13 +61,10 @@
         text-align: left;
       }
     }
-
     .hero-text {
       flex: 1;
       padding: 1rem;
-      /* font-family: 'Garet-Book', sans-serif; */
     }
-
     .hero-text h4 {
       font-size: 2rem;
       margin-bottom: 1rem;
@@ -85,63 +72,49 @@
       font-family: 'Garet-Book';
       font-weight: 800;
     }
-
     .hero-image {
       flex: 1;
       padding: 1rem;
       text-align: center;
     }
-
     .hero-image img {
       max-width: 100%;
       height: auto;
       border-radius: 10px;
     }
-
     section.program {
       background-color: #065f3d;
       color: #ffffff;
       text-align: center;
       padding: 4rem 2rem 2rem;
     }
-
     .program h2 {
       font-size: 1.8rem;
       margin-top: 2rem;
       font-family: 'Garet-Heavy', sans-serif;
       font-weight: 800;
     }
-
     .program-visuals {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 2rem;
     }
-
     @media(min-width: 768px) {
       .program-visuals {
         flex-direction: row;
         justify-content: center;
       }
     }
-
-
     .program-visuals img:first-child {
       width: 250px;
       height: auto;
-      /* margin-left: 100px;
-      margin-right: 20px; */
     }
-
     .program-visuals img:last-child {
       height: auto;
       max-width: 750px;
       width: 100%;
-
-      /* margin-right: 100px; */
     }
-
     section.features {
       padding: 3rem 2rem;
       background-color: #ffffff;
@@ -149,7 +122,6 @@
       flex-direction: column;
       gap: 2rem;
     }
-
     @media(min-width: 768px) {
       section.features {
         flex-direction: row;
@@ -157,7 +129,6 @@
         gap: 2rem;
       }
     }
-
     .feature-box {
       flex: 1;
       padding: 2rem;
@@ -166,7 +137,6 @@
       font-size: 1rem;
       font-family: 'Garet-Book', sans-serif;
     }
-
     .feature-box h3 {
       color: #00b050;
       margin-bottom: 1.5rem;
@@ -175,13 +145,60 @@
       font-size: 1.3rem;
       font-weight: 800;
     }
-
     .feature-box p {
       margin-bottom: 1rem;
       font-weight: 400;
       font-family: 'Garet-Book', sans-serif;
     }
-
+    /* -------- ARTICLES SECTION -------- */
+    .article-section {
+      background: #f3f8f2;
+      padding: 2rem;
+      margin: 2rem 0;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+    }
+    .custom-article-card {
+      background: #065f3d;
+      color: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      max-width: 700px;
+      width: 100%;
+      font-family: 'Garet-Book', sans-serif;
+    }
+    .article-heading {
+      color: #fff;
+      margin-bottom: 1.5rem;
+      font-size: 2.2rem;
+      text-align: center;
+      font-family: 'Garet', sans-serif;
+      font-weight: bold;
+    }
+    .article-heading a {
+      color: #fff;
+      text-decoration: underline;
+      font-weight: bold;
+      transition: color 0.2s;
+    }
+    .article-heading a:hover {
+      color: #98fb98;
+    }
+    .custom-article-card p {
+      color: #e4eee1;
+      font-size: 1.1rem;
+      margin-bottom: 1.2rem;
+    }
+    .article-source {
+      color: #b9eddd;
+      font-size: 0.95rem;
+      text-align: right;
+      font-style: italic;
+      margin-bottom: 0;
+    }
+    /* -------- CONTACT SECTION -------- */
     section.contact {
       padding: 2rem;
       background: #dcfac7;
@@ -190,7 +207,6 @@
       font-family: 'Garet-Book', sans-serif;
       font-weight: 800;
     }
-
     form {
       max-width: 500px;
       margin: 0 auto;
@@ -199,7 +215,6 @@
       font-family: 'Garet-Book', sans-serif;
       gap: 1rem;
     }
-
     input,
     textarea {
       padding: 0.75rem;
@@ -208,7 +223,6 @@
       font-size: 1rem;
       font-family: 'Garet-Book', sans-serif;
     }
-
     button {
       padding: 0.75rem;
       border: none;
@@ -220,7 +234,6 @@
       font-family: 'Garet-Book', sans-serif;
       font-weight: 700;
     }
-
     .social-icons {
       display: flex;
       justify-content: center;
@@ -228,7 +241,6 @@
       margin-top: 2rem;
       flex-wrap: wrap;
     }
-
     .social-icons a {
       display: inline-block;
       background-color: #e0e0e0;
@@ -242,12 +254,10 @@
       align-items: center;
       gap: 0.5rem;
     }
-
     .social-icons img {
       width: 20px;
       height: 20px;
     }
-
     footer {
       background: #000;
       color: #fff;
@@ -260,13 +270,12 @@
 
 <body>
   <header>
-    <h1>5easier</h1>
+    <img src="5easierlogo.png" alt="5easier Logo" class="logo" style="height:60px;">
   </header>
 
   <section class="hero">
     <div class="hero-text">
-      <h4>Compliance Management Platform built for Safety Professionals to drive efficiency, mitigate safety risk &
-        empower team.</h4>
+      <h4>Compliance Management Platform built for Safety Professionals to drive efficiency, mitigate safety risk & empower team.</h4>
     </div>
     <div class="hero-image">
       <img src="page2_image.png" alt="Compliance Management Dashboard" loading="lazy" />
@@ -306,6 +315,24 @@
     </div>
   </section>
 
+  <!-- Article section goes directly ABOVE the CTA (contact) section -->
+  <section class="article-section">
+    <article class="custom-article-card">
+      <h2 class="article-heading">
+        <a href="SafetyEconomics.pdf" target="_blank" rel="noopener noreferrer">Safety Economics</a>
+      </h2>
+      <p>
+        The National Safety Council (NSC) noted that in 2023 alone, the total cost of work injuries in the United States reached
+        <strong>$176.5 billion</strong>. This figure includes wage and productivity losses of <strong>$53.1 billion</strong>,
+        medical expenses of <strong>$36.8 billion</strong>, and administrative costs of <strong>$59.5 billion</strong>.
+      </p>
+      <p class="article-source">
+        Source: National Safety Council (NSC), 2023
+      </p>
+    </article>
+  </section>
+
+  <!-- CTA/contact section -->
   <section class="contact">
     <h2>Join Our Pilot Program – Limited Spots</h2>
     <form>
@@ -314,7 +341,6 @@
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-
     <div class="social-icons">
       <a href="https://www.linkedin.com/company/5easier" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" />
@@ -337,17 +363,14 @@
   </footer>
   <script>
     const form = document.querySelector("form");
-
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
-
       const formData = new FormData(form);
       const payload = {
         name: formData.get("name"),
         email: formData.get("email"),
         message: formData.get("message"),
       };
-
       try {
         const response = await fetch("https://yyxugksczggbeyziyrdf.supabase.co/rest/v1/contacts", {
           method: "POST",
@@ -386,5 +409,4 @@
     });
   </script>
 </body>
-
 </html>
